# Information-Theory-code-lzw--huffman-

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  create_test_files.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  test_all.py
.github/workflows/: ci.yml
algorithms/: channel.py  huffman.py  lzw.py
docs/: ACADEMIC_POLICY.md  RELEASE_NOTES_v1.0.0.md  REPORT.md
docs/screenshots/: README.md
gui/: app.py  main_app.py
test_files/: data.csv  sample_text.txt  sample_text.txt.huf  sample_text.txt.lzw
tests/: __init__.py  test_codecs.py  test_entropy.py
utils/: entropy.py
web/: index.html
