[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "compression-toolkit"
version = "1.1.0"
description = "Educational Huffman & LZW compression toolkit (GUI + Flask web)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Mohmedahmed888" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --tb=short"

[tool.ruff]
target-version = "py38"
line-length = 120
src = ["algorithms", "utils", "gui", "."]
exclude = [
    ".venv",
    "test_files",
    "uploads",
    "output",
    "assets",
    "gui/main_app.py",
]

[tool.ruff.lint]
select = ["E9", "F"]
ignore = []
